applications/ingress/web-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    type: application
    service: web
  name: web
spec:
  rules:
  - host: web
    http:
      paths:
      - path: /
        backend:
          serviceName: web-server
          servicePort: 80
